@@ -1,3 +1,9 @@
+2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
+
+	* example-cdc/usb_stm32f103.c: Update from Gnuk.
+	* example-cdc/usb_lld.h: Ditto.
+	* example-cdc/usb-cdc.c: Follow the change.
+
 2015-07-15  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 0.07.
